<resources>
    <string name="app_name">ElectronicSebha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="azkar">أذكار الصباح والمساء</string>
    <string name="tasbehBenifit">فوائد التسبيح</string>
    <string name="sobhanAlla" >سبحان الله</string>
    <string name="alhamdllah">الحمد لله</string>
    <string name="about">تطبيق السبحة تطبيق يهدف الى تسبيح الله عز وجل ويقول الله تعالى فى كتابة العزيز وسبحوة بكرة واصيلا كما يقول الله تعالى ايضا فى كتابة الكريم "فَاصْبِرْ عَلَىٰ مَا يَقُولُونَ وَسَبِّحْ بِحَمْدِ رَبِّكَ قَبْلَ طُلُوعِ الشَّمْسِ وَقَبْلَ غُرُوبِهَا ۖ وَمِنْ آنَاءِ اللَّيْلِ فَسَبِّحْ وَأَطْرَافَ النَّهَارِ لَعَلَّكَ تَرْضَىٰ" وايات التسبيح كثيرة فى القرأن الكريم وقد تم انشاء التطبيق للفائدة العامة </string>
    <string name="nogodelsealla">لا إالة إلا الله</string>
    <string name="allahakbar">الله اكبر</string>
    <string name="azkarwrite">أذكار الصباح والمساء من القرآن الكريم ورد في آي الذكر الحكيم العديد من الأذكار، منها ما يأتي: (اللَّهُ لَا إِلَٰهَ إِلَّا هُوَ الْحَيُّ الْقَيُّومُ ۚ لَا تَأْخُذُهُ سِنَةٌ وَلَا نَوْمٌ ۚ لَّهُ مَا فِي السَّمَاوَاتِ وَمَا فِي الْأَرْضِ ۗ مَن ذَا الَّذِي يَشْفَعُ عِندَهُ إِلَّا بِإِذْنِهِ ۚ يَعْلَمُ مَا بَيْنَ أَيْدِيهِمْ وَمَا خَلْفَهُمْ ۖ وَلَا يُحِيطُونَ بِشَيْءٍ مِّنْ عِلْمِهِ إِلَّا بِمَا شَاءَ ۚ وَسِعَ كُرْسِيُّهُ السَّمَاوَاتِ وَالْأَرْضَ ۖ وَلَا يَئُودُهُ حِفْظُهُمَا ۚ وَهُوَ الْعَلِيُّ الْعَظِيمُ)؛[٣] (آمَنَ الرَّسُولُ بِمَا أُنزِلَ إِلَيْهِ مِن رَّبِّهِ وَالْمُؤْمِنُونَ ۚ كُلٌّ آمَنَ بِاللَّهِ وَمَلَائِكَتِهِ وَكُتُبِهِ وَرُسُلِهِ لَا نُفَرِّقُ بَيْنَ أَحَدٍ مِّن رُّسُلِهِ ۚ وَقَالُوا سَمِعْنَا وَأَطَعْنَا ۖ غُفْرَانَكَ رَبَّنَا وَإِلَيْكَ الْمَصِيرُ*لَا يُكَلِّفُ اللَّهُ نَفْسًا إِلَّا وُسْعَهَا ۚ لَهَا مَا كَسَبَتْ وَعَلَيْهَا مَا اكْتَسَبَتْ ۗ رَبَّنَا لَا تُؤَاخِذْنَا إِن نَّسِينَا أَوْ أَخْطَأْنَا ۚ رَبَّنَا وَلَا تَحْمِلْ عَلَيْنَا إِصْرًا كَمَا حَمَلْتَهُ عَلَى الَّذِينَ مِن قَبْلِنَا ۚ رَبَّنَا وَلَا تُحَمِّلْنَا مَا لَا طَاقَةَ لَنَا بِهِ ۖ وَاعْفُ عَنَّا وَاغْفِرْ لَنَا وَارْحَمْنَا ۚ أَنتَ مَوْلَانَا فَانصُرْنَا عَلَى الْقَوْمِ الْكَافِرِينَ).[٤] وفي فضل هاتين الآيتين، ما ورد عن رسول الله صلى الله عليه وسلم: (مَن قَرَأَ بالآيَتَيْن؛ يعني: مَن قَرَأَ بالآيَتَيْنِ مِن آخِرِ سُورَةِ البَقَرَةِ في لَيْلَةٍ كَفَتَاهُ)؛[٥] حيث ورد في تفسير معنى (كفتاهُ) عدّة معانٍ، منها معنى ابن حجر رحمه الله: تكفيان قارئهما من كلّ سوء، وقد قيل أيضاً إنّ من معانيها: دفعتا عن قارئهما شرّ الإنس والجنّ، وقيل: كفتا قارئهما شرّ الشيطان، أما المعنى الأصح؛ فهو ما ذكره ابن القيم: كفتا قارئهما شرّ ما يؤذيه.[٦] ممّا يُقرأ كلّ صبح ومساء، قوله تعالى: (حم*تَنزِيلُ الْكِتَابِ مِنَ اللَّهِ الْعَزِيزِ الْعَلِيمِ*غَافِرِ الذَّنبِ وَقَابِلِ التَّوْبِ شَدِيدِ الْعِقَابِ ذِي الطَّوْلِ ۖ لَا إِلَٰهَ إِلَّا هُوَ ۖ إِلَيْهِ الْمَصِيرُ).[٧] آيات سورة الإخلاص والمعوّذتين: سورة الإخلاص: (قُلْ هُوَ اللَّهُ أَحَدٌ*اللَّهُ الصَّمَدُ*لَمْ يَلِدْ وَلَمْ يُولَدْ*وَلَمْ يَكُن لَّهُ كُفُوًا أَحَدٌ).[٨] سورة الفلق: (قُلْ أَعُوذُ بِرَبِّ الْفَلَقِ*مِن شَرِّ مَا خَلَقَ*وَمِن شَرِّ غَاسِقٍ إِذَا وَقَبَ*وَمِن شَرِّ النَّفَّاثَاتِ فِي الْعُقَدِ*وَمِن شَرِّ حَاسِدٍ إِذَا حَسَدَ).[٩] سورة الناس: (قُلْ أَعُوذُ بِرَبِّ النَّاسِ*مَلِكِ النَّاسِ*إِلَٰهِ النَّاسِ*مِن شَرِّ الْوَسْوَاسِ الْخَنَّاسِ*الَّذِي يُوَسْوِسُ فِي صُدُورِ النَّاسِ*مِنَ الْجِنَّةِ وَالنَّاسِ).[١٠] وفي فضل هذه السور ما ورد في حديث رسولنا الكريم، فعن عبد الله بن حبيب الأسلمي، قال: (خرجنا في ليلةِ مطرٍ وظلمةٍ شديدةٍ نطلبُ النبيَّ صلَّى اللهُ عليهِ وسلَّمَ ليصلِّيَ لنا، فأدركناه، فقال: قلْ، فلم أقلْ شيئًا، ثم قال: قلْ، فلم أقلْ شيئًا، ثم قال: قلْ: فقلتُ: يا رسولَ اللهِ، ما أقولُ؟ قال: قلْ: {قُلْ هُوَ اللَّهُ أَحَدٌ}، والمعوِّذَتين، حين تُمسي وحين تصبحُ ثلاثَ مرَّاتٍ، تَكفيكَ من كلِّ شيءٍ).[١١] أذكار الصباح والمساء من سنّة المصطفى ممّا ورد في الحديث النبوي الشريف من أذكار الصباح والمساء، ما يأتي: (اللَّهُمَّ أنْتَ رَبِّي لا إلَهَ إلَّا أنْتَ، خَلَقْتَنِي وأنا عَبْدُكَ، وأنا علَى عَهْدِكَ ووَعْدِكَ ما اسْتَطَعْتُ، أعُوذُ بكَ مِن شَرِّ ما صَنَعْتُ، أبُوءُ لكَ بنِعْمَتِكَ عَلَيَّ، وأَبُوءُ لكَ بذَنْبِي فاغْفِرْ لِي، فإنَّه لا يَغْفِرُ الذُّنُوبَ إلَّا أنْتَ).[١٢] (مَن قالَ: حِينَ يُصْبِحُ وَحِينَ يُمْسِي: سُبْحَانَ اللهِ وَبِحَمْدِهِ، مِئَةَ مَرَّةٍ، لَمْ يَأْتِ أَحَدٌ يَومَ القِيَامَةِ بأَفْضَلَ ممَّا جَاءَ به إِلَّا أَحَدٌ قالَ مِثْلَ ما قالَ، أَوْ زَادَ عليه).[١٣] (اللهمَّ إنِّي أعوذُ بك من الهمِّ والحزنِ، والعجزِ والكسلِ، والبُخلِ والجُبنِ، وضَلَعِ الدَّينِ، وغَلَبَةِ الرجالِ).[١٤] (أعوذُ بكلماتِ اللهِ التَّامَّاتِ مِن شرِّ ما خلَق لم يضُرَّك).[١٥] (اللهمَّ فاطرَ السمواتِ والأرضِ، عالمَ الغيبِ والشهادةِ، لا إلهَ إلَّا أنتَ ربَّ كلِّ شيءٍ ومَليكَه، أعوذُ بك من شرِّ نفسي ومن شرِّ الشيطانِ وشرَكِه، وأنْ أقترفَ على نفسي سوءًا أو أجرَّهُ إلى مسلمٍ).[١٦] (اللهُمَّ إني أَسْأَلُكَ العافيةَ في الدنيا والآخرةِ، اللهُمَّ إني أَسْأَلُكَ العَفْوَ والعافيةَ في دِينِي ودُنْيَايَ، وأهلي ومالي، اللهُمَّ اسْتُرْ عَوْراتِي وآمِنْ رَوْعاتِي، اللهُمَّ احْفَظْنِي من بينِ يَدَيَّ، ومن خلفي، وعن يميني، وعن شمالي، ومن فوقي، وأعوذ بعَظَمَتِكَ أنْ أُغْتالَ من تحتي).[١٧] (اللَّهمَّ بِكَ أصبحنا وبِكَ أمسينا، وبِكَ نحيا وبِكَ نموتُ، وإليْكَ المصيرُ، وإذا أمسى فليقل: اللَّهمَّ بِكَ أمسينا وبِكَ أصبحنا، وبِكَ نحيا وبِكَ نموتُ، وإليْكَ النُّشورُ).[١٨] (لا إلَهَ إلَّا اللَّهُ، وحْدَهُ لا شَرِيكَ له، له المُلْكُ وله الحَمْدُ، وهو علَى كُلِّ شيءٍ قَدِيرٌ).[١٩] (لا إلهَ إلا اللهُ وحدَه، لا شريكَ له، له الملكُ، وله الحمدُ، وهو على كلِّ شيءٍ قديرٍ).[٢٠] (يا حيُّ يا قيُّومُ برَحمتِكَ أستَغيثُ أصلِح لي شأني كُلَّهُ ولا تَكِلني إلى نَفسي طرفةَ عينٍ).[٢١] (أَمْسَيْنَا وَأَمْسَى المُلْكُ لِلَّهِ، وَالْحَمْدُ لِلَّهِ لا إلَهَ إلَّا اللَّهُ، وَحْدَهُ لا شَرِيكَ له، له المُلْكُ وَلَهُ الحَمْدُ وَهو علَى كُلِّ شيءٍ قَدِيرٌ، رَبِّ أَسْأَلُكَ خَيْرَ ما في هذِه اللَّيْلَةِ وَخَيْرَ ما بَعْدَهَا، وَأَعُوذُ بكَ مِن شَرِّ ما في هذِه اللَّيْلَةِ وَشَرِّ ما بَعْدَهَا، رَبِّ أَعُوذُ بكَ مِنَ الكَسَلِ وَسُوءِ الكِبَرِ، رَبِّ أَعُوذُ بكَ مِن عَذَابٍ في النَّارِ وَعَذَابٍ في القَبْرِ وإذَا أَصْبَحَ قالَ ذلكَ أَيْضًا: أَصْبَحْنَا وَأَصْبَحَ المُلْكُ لِلَّهِ).[٢٢] (رَضِيتُ بِاللهِ رَبًّا، وَبِالْإِسْلَامِ دِينًا، وَبِمُحَمَّدٍ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ نَبِيًّا، إِلَّا كَانَ حَقًّا عَلَى اللهِ أَنْ يُرْضِيَهُ يَوْمَ الْقِيَامَةِ).[٢٣] (بسمِ اللَّهِ الَّذي لا يضرُّ معَ اسمِهِ شيءٌ في الأرضِ ولا في السَّماءِ، وَهوَ السَّميعُ العليمُ، ثلاثَ مرَّاتٍ).[٢٤] كما رُوِي عن رَسُولَ اللَّهِ صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ قوله: (ما من عبدٍ يقولُ في صباحِ كلِّ يومٍ ومساءِ كلِّ ليلةٍ: بسمِ اللَّهِ الَّذي لا يضرُّ معَ اسمِهِ شيءٌ في الأرضِ ولا في السَّماءِ، وَهوَ السَّميعُ العليمُ، ثلاثَ مرَّاتٍ، إلا لم يضرَّهُ شيءٌ).[٢٥] (حَسبيَ اللَّهُ لا إلَهَ إلَّا هوَ، عليهِ توَكَّلتُ وَهوَ ربُّ العرشِ العظيمِ، سَبعَ مرَّاتٍ).[٢٦] (اللهم عافني في بدني، اللهم عافني في سمعي، اللهم عافني في بصري، اللهم إني أعوذ بك من الكفر والفقر، اللهم إني أعوذ بك من عذاب القبر، لا إله إلا أنت).[٢٧] (اللَّهمَّ ما أصبَح بي مِن نعمةٍ أو بأحَدٍ مِن خَلْقِكَ، فمنكَ وحدَكَ لا شريكَ لكَ، فلَكَ الحمدُ ولكَ الشُّكرُ، فقد أدى شُكْرَ ذلكَ اليومِ)،[٢٨] وفي المساء يُقال: (اللهُمّ ما أمسى...). (سُبْحَانَ اللهِ وَبِحَمْدِهِ، عَدَدَ خَلْقِهِ وَرِضَا نَفْسِهِ وَزِنَةَ عَرْشِهِ وَمِدَادَ كَلِمَاتِهِ).[٢٩] (اللهمَّ إني أصبحتُ أُشْهدُك وأُشْهِدُ حملةَ عرشِك، وملائكتِك، وجميعَ خلقِك، أنك أنت اللهُ الذي لا إله إلا أنت، وأن محمدًا عبدُك ورسولُك).[٣٠] (سُبْحَانَ اللهِ وبِحَمْدِهِ، أسْتَغْفِرُ اللَّهَ وأَتُوبُ إلَيْهِ).[٣١] (أمسَينا وأمسَى الملكُ للَّهِ، والحمدُ للَّهِ لا إلَهَ إلَّا اللَّهُ وحدَهُ لا شريكَ لَهُ - أراهُ قالَ -: لَهُ المُلكُ ولَهُ الحمدُ، وَهوَ علَى كلِّ شيءٍ قديرٌ، أسألُكَ خَيرَ ما في هذِهِ اللَّيلةِ وخيرَ ما بعدَها، وأعوذُ بِكَ من شرِّ هذِهِ اللَّيلةِ وشرِّ ما بعدَها، وأعوذُ بِكَ منَ الكسلِ وسوءِ الكبرِ، وأعوذُ بِكَ من عذابِ النَّارِ وعذابِ القبرِ وإذا أصبحَ قالَ ذلِكَ أيضًا: أصبَحنا وأصبحَ المُلكُ للَّهِ والحمدُ للَّهِ).[٣٢] اللَّهُمَّ أَنْتَ رَبِّي لا إِلَهَ إِلا أَنْتَ ، عَلَيْكَ تَوَكَّلْتُ ، وَأَنْتَ رَبُّ الْعَرْشِ الْعَظِيمِ ، مَا شَاءَ اللَّهُ كَانَ ، وَمَا لَمْ يَشَأْ لَمْ يَكُنْ ، وَلا حَوْلَ وَلا قُوَّةَ إِلا بِاللَّهِ الْعَلِيِّ الْعَظِيمِ ، أَعْلَمُ أَنَّ اللَّهَ عَلَى كُلِّ شَيْءٍ قَدِيرٌ ، وَأَنَّ اللَّهَ قَدْ أَحَاطَ بِكُلِّ شَيْءٍ عِلْمًا ، اللَّهُمَّ إِنِّي أَعُوذُ بِكَ مِنْ شَرِّ نَفْسِي ، وَمِنْ شَرِّ كُلِّ دَابَّةٍ أَنْتَ آخِذٌ بِنَاصِيَتِهَا، إِنَّ رَبِّي عَلَى صِرَاطٍ مُسْتَقِيمٍ.</string>
    <string name="benifits">فضل أذكار الصباح والمساء
        ممّا ورد في فضل أذكار الصباح والمساء، وعظيم أجرها وبركتها، ما يأتي:أذكار الصباح والمساء، والمداومة عليها سبب من أسباب: فتح باب الخيرات والبركات. الحفظ والسلامة من شرور الدنيا والآخرة. تحصيل الأجور العظيمة من الله سبحانه. صلاح العبد، فصلاحه متوقف على صلاح جوارحه، وصلاحها متوقف على صلاح قلبه، وصلاحه لا يتم إلا بمحبة الله وتعظيمه، وهذان لا يتحققان إلا بذكر الله. إشعار العبد بأنه مفتقر إلى ربه، ومحتاج إليه. أذكار الصباح والمساء هي أفضل سلاح لدفع الشر قبل وقوعه، وحتى بعد وقوعه. أذكار الصباح والمساء قوت للأرواح والقلوب، تورث في القلب السرور، والطمأنينة، والسكينة، والراحة. في أذكار الصباح والمساء اعتراف العبد بنعم الله العظيمة عليه، وشكره على تفضّله وإحسانه، وتقوية لصلته بربه.</string>
</resources>